--- a/src/styles/Row.css
+++ b/src/styles/Row.css
@@ -1,3 +1,13 @@
 .row{
     display: flex;
+    justify-content: space-between;
+    height: 100%;
+
+    div:first-of-type{
+        border-left:none;
+    }
+
+    div:last-of-type{
+        border-right: none;
+    }
 }
