--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,15 @@
+body{
+    margin: 0;
+}
+#root{
+    height: 100vh;
+}
+.content{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .main{
     --text: #010B2D;
     --background: #F6F4F3;
