--- a/src/styles/Tile.css
+++ b/src/styles/Tile.css
@@ -8,8 +8,10 @@
     align-items: center;
     border: 1px solid #89043D;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .empty{
     background: #717C89;
+    cursor: default;
 }
