--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,15 @@
-body{
+body {
     margin: 0;
-}
-#root{
-    height: 100vh;
-}
-.content{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #F6F4F3;
+    color: #010B2D;
+  }
+  
+  .content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 2rem;
+  }
 .main{
     --text: #010B2D;
     --background: #F6F4F3;
