--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,11 +1,12 @@
 .board {
+    width: 350px;
+    height: 350px;
     display: grid;
     gap: 5px;
     background-color: #2D5064;
     padding: 5px;
     border-radius: 12px;
     margin: 0 auto;
-    width: fit-content;
 }
   
   
